--- a/mxnet_practice/02_autograd.ipynb
+++ b/mxnet_practice/02_autograd.ipynb
@@ -1,6 +1,188 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 使用autograd来自动求导"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#先导入autograd\n",
+    "import mxnet.ndarray as nd\n",
+    "import mxnet.autograd as ag"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 为变量附上梯度"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#假设我们想对函数 f=2×x2f=2×x2 求关于 xx 的导数。我们先创建变量x，并赋初值。\n",
+    "x = nd.array([[1, 2], [3, 4]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#当进行求导的时候，我们需要一个地方来存x的导数，\n",
+    "#这个可以通过NDArray的方法attach_grad()来要求系统申请对应的空间。\n",
+    "x.attach_grad()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#下面定义f。默认条件下，MXNet不会自动记录和构建用于求导的计算图，\n",
+    "#我们需要使用autograd里的record()函数来显式的要求MXNet记录我们需要求导的程序\n",
+    "with ag.record():\n",
+    "    y = x * 2\n",
+    "    z = y * x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#接下来我们可以通过z.backward()来进行求导。\n",
+    "#如果z不是一个标量，那么z.backward()等价于nd.sum(z).backward().\n",
+    "z.backward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x.grad:  \n",
+      "[[  4.   8.]\n",
+      " [ 12.  16.]]\n",
+      "<NDArray 2x2 @cpu(0)>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "[[ 1.  1.]\n",
+       " [ 1.  1.]]\n",
+       "<NDArray 2x2 @cpu(0)>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#现在我们来看求出来的导数是不是正确的\n",
+    "print('x.grad: ', x.grad)\n",
+    "x.grad == 4*x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 对控制流求导\n",
+    "命令式的编程的一个便利之处是几乎可以对任意的可导程序进行求导，即使里面包含了Python的控制流。考虑下面程序，里面包含控制流for和if，但循环迭代的次数和判断语句的执行都是取决于输入的值。不同的输入会导致这个程序的执行不一样。（对于计算图框架来说，这个对应于动态图，就是图的结构会根据输入数据不同而改变）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def f(a):\n",
+    "    b = a * 2\n",
+    "    while nd.norm(b).asscalar() < 1000:\n",
+    "        b = b * 2\n",
+    "    if nd.sum(b).asscalar() > 0:\n",
+    "        c = b\n",
+    "    else:\n",
+    "        c = 100 * b\n",
+    "    return c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#我们可以跟之前一样使用record记录和backward求导。\n",
+    "a = nd.random_normal(shape=3)\n",
+    "a.attach_grad()\n",
+    "with ag.record():\n",
+    "    c = f(a)\n",
+    "c.backward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "[ 1.  1.  1.]\n",
+       "<NDArray 3 @cpu(0)>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.grad == c/a"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
